Add guided viral script copywriter
